--- a/XCode/DewertOkin/DewertOkin/RemoteControl/Remote.storyboard
+++ b/XCode/DewertOkin/DewertOkin/RemoteControl/Remote.storyboard
@@ -189,7 +189,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FXG-di-7HQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="935" y="26"/>
+            <point key="canvasLocation" x="957" y="26"/>
         </scene>
         <!--Presets Controller-->
         <scene sceneID="xaU-ZF-daG">
@@ -284,7 +284,7 @@
                                 </constraints>
                                 <state key="normal" title="Back"/>
                                 <connections>
-                                    <segue destination="7U7-yR-P4u" kind="custom" customClass="pullUpUnwindSegue" customModule="DewertOkin" customModuleProvider="target" id="ezb-3d-8hf"/>
+                                    <segue destination="7U7-yR-P4u" kind="custom" customClass="pullUpUnwindSegue" customModule="DewertOkin" customModuleProvider="target" id="NBl-g8-nGH"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3Ye-X0-sWD">
@@ -307,6 +307,9 @@
                                     <constraint firstAttribute="height" constant="50" id="gjl-MR-yA4"/>
                                 </constraints>
                                 <state key="normal" title="Finished"/>
+                                <connections>
+                                    <segue destination="Hlx-Ed-2u2" kind="unwind" unwindAction="unwindFromAddPreset:" id="29J-p0-IH7"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -334,6 +337,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ed-NC-ZLc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Hlx-Ed-2u2" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="935" y="735"/>
         </scene>
@@ -344,7 +348,7 @@
         <image name="remote_icon" width="20" height="20"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ezb-3d-8hf"/>
+        <segue reference="NBl-g8-nGH"/>
         <segue reference="cCd-WO-O29"/>
     </inferredMetricsTieBreakers>
 </document>
